[package]
name = "backend"
version = "0.1.0"
authors = ["Hironori Yamamoto <mr.nikoru918@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
envy = "0.4"
env_logger = "0.8.2"
log = "0.4.0"
reqwest = { version = "0.10", features = ["json"] }
serde = { version ="1.0.104", features = ["derive"] }
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2.1"